tests/e2e/pass/v4_struct_default_repr.ep
# EXIT: 0
# STDOUT: Outer{inner: 0}

struct Inner {
    x: i64
}

struct Outer {
    inner: Inner
}

fun main(): i64 {
    println(str(new Outer {}))
    return 0
}
