tests/e2e/fail/v4_fail_struct_default_repr.ep
# COMPILE_FAIL: str expected str, integer, bool, or u8[], got Outer

struct Inner {
    x: i64
}

struct Outer {
    inner: Inner
}

fun main(): i64 {
    println(str(new Outer {}))
    ret 0
}
